# bdd-example

./: Makefile  README.md  pyproject.toml
features/: environment.py  tracks.feature
features/steps/: tracks.py
tests/: test_version.py
tests/controllers/: test_track_controller.py
tests/models/: test_track.py
tracks_sdk/controllers/: track_controller.py
tracks_sdk/models/: track.py
tracks_sdk/services/: melidata_api.py
